# rng_work

./: CMakeLists.txt  README.md  randomness_studio.py
analysis/: aggressive_predict.py  analyze.py  plot_aggressive_entropy.py  qrng_wrapper.py  quick_demo.py  qw.py  randomness_studio.py  realtime_censor.py  run_aggressive.sh  traffic_attack_visual.py
analysis_out/: pair_same_seed.json  single.json  single_entropy.csv  test_single.json  test_single2.json
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  dispatcher  generator  predictor
scripts/: analyze_same_seed.sh  run_all_experiments.sh  run_backend.sh  run_dispatcher_drbg.sh  run_dispatcher_file.sh  run_generator.sh  run_qrng_two_nodes.sh  run_same_seed_two_nodes.sh  run_single_node.sh  setup_linux.sh
